# SimGen-Engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
SimGenManager/: Program.cs  config.json
include/core/: entity.h  global_pool.h  graph.h  node.h  scheduler.h  threadpool.h  types.h
include/fabric/: scene_database.h
include/nodes/physics/: physics_node.h
include/nodes/randomizers/: cam_pos_randomizer.h  color_randomizer.h  randomizer_node.h  transform_randomizer.h
include/nodes/render/: ray_trace_node.h
include/nodes/render/rt_core/: box.h  camera.h  hitable.h  hitable_list.h  material.h  ray.h  sphere.h
include/nodes/sensor/: sensor_node.h
include/nodes/spawners/: box_spawner.h  sphere_spawner.h
scripts/: make_gif.py
src/: main.cpp
src/core/: graph.cpp
src/nodes/: physics_node.cpp  ray_tracing.cpp  render_node.cpp  sensor_node.cpp
src/nodes/randomizer/: cam_pos_randomizer.cpp  color_randomizer.cpp  transform_randomizer.cpp
